# hexlet-django-blog

./: Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/article/: create.html  edit.html  index.html
hexlet_django_blog/templates/: 404.html  about.html  base.html  index.html
